k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shorty-frontend
  namespace: shorty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: shorty-frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: shorty
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: frontend
